tests/Metalama.Framework.Tests.AspectTests/Tests/Aspects/InvalidCode/EmptyPropertyTemplate.t.cs
// CompileTimeAspectPipeline.ExecuteAsync failed.
// Error CS0548 on `Instance`: `'Aspect.Instance': property or indexer must have at least one accessor`